# mpk-hate

./: Cargo.toml  docker-compose.yml
mpk-cracow-api/: Cargo.toml
mpk-cracow-api/src/: lib.rs
mpk-hate-cron/: Cargo.toml  sqlx-data.json
mpk-hate-cron/migrations/: 20220609175342_initial-schema.sql
mpk-hate-cron/src/: main.rs
mpk-hate-web/: Cargo.toml
