[package]
name = "mpk-hate-cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "migrate", "macros" ] }
chrono = "0.4"
tokio = { version = "1.18", features = ["full"] }
futures = "0.3"
itertools = "0.10"
tracing = "0.1"
env_logger = "0.9"
log = "0.4"
mpk-cracow-api = { path = "../mpk-cracow-api" }
